--- a/About_Me.html
+++ b/About_Me.html
@@ -14,17 +14,17 @@
     <nav>
         <a href = "index.html"><img src="Images/ComputerScience.png"> </a>
         <div class = "nav-links" id="navLinks">
-            <i class= "fa-solid fa-circle-xmark" onclick="hideMenu()"> </i>
+            <i class= "fa fa-circle-xmark" onclick="hideMenu()"> </i>
 
             <ul>
-                <li> <a href =""> About Me </a></li>
-                <li> <a href =""> Skills </a></li>
-                <li> <a href =""> Projects </a></li>
-                <li> <a href =""> Contacts </a></li>
-                <li> <a href =""> More </a></li>
+                <li> <a href ="about.html"> About Me </a></li>
+                <li> <a href ="skills.html"> Skills </a></li>
+                <li> <a href ="projects.html"> Projects </a></li>
+                <li> <a href ="contacts.html"> Contacts </a></li>
+                <li> <a href ="more.html"> More </a></li>
             </ul>
         </div>
-        <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+        <i class="fa fa-bars" onclick="showMenu()"></i>
     </nav>
 </section>
 
