--- a/Skills.html
+++ b/Skills.html
@@ -17,11 +17,11 @@
             <i class= "fa-solid fa-circle-xmark" onclick="hideMenu()"> </i>
 
             <ul>
-                <li> <a href =""> About Me </a></li>
-                <li> <a href =""> Skills </a></li>
-                <li> <a href =""> Projects </a></li>
-                <li> <a href =""> Contacts </a></li>
-                <li> <a href =""> More </a></li>
+                <li> <a href ="about.html"> About Me </a></li>
+                <li> <a href ="skills.html"> Skills </a></li>
+                <li> <a href ="projects.html"> Projects </a></li>
+                <li> <a href ="contacts.html"> Contacts </a></li>
+                <li> <a href ="more.html"> More </a></li>
             </ul>
         </div>
         <i class="fa-solid fa-bars" onclick="showMenu()"></i>
